# robotarm-control

./: .gitignore  .pre-commit-config.yaml  README.md  README_en.md  README_zh.md  TODO.md  logging.py  pyproject.toml  run.md  run.zhanhui.20250515.md  server.py
.cursor/rules/: backend-architecture.mdc  data-streaming.mdc  frontend-architecture.mdc  pipeline-system.mdc  (+1 more)
backend/: .env-example  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
backend/.hooks/: pre-commit
backend/app/: config.py
backend/app/api/: serv.py  ws_routes.py
backend/app/utils/: websocket.py
backend/config/: dev.example.yaml  prod.example.yaml
backend/examples/: streaming.py
backend/lib/: server.py
backend/lib/handlers/: __init__.py  arm_control.py  armcontrol.py  base.py  calibrate.py  data_loader.py  dataloader.py  detect.py  factory.py
backend/lib/pipelines/: __init__.py  base.py  default.yaml  factory.py  manager.py  process.py  yahboom_pipelines.py
backend/lib/pipelines/modulus/: __init__.py  config.yaml  pipeline.py
backend/lib/pipelines/yahboom/: __init__.py  config.yaml  pipeline.py
backend/lib/pipelines/yahboom/handlers/: __init__.py  arm_control.py  calibrate.py  detect.py
backend/lib/utils/: data_factory.py  data_stream.py  factory.py  logger.py
docs/: design.md  status.md
examples/: streaming.py
frontend/: .lintstagedrc.js  README.md  bun.lockb  package.json
handlers/: __init__.py  armcontrol.py  calibrate.py  dataloader.py  detect.py
pipelines/: __init__.py  base.py  default.yaml  yahboom_pipelines.py
utils/: calibrate.py  factory.py  load_handler.py  logger.py
(+21 files in other folders)
