[project]
name = "Modu-RobotArm-Control"
version = "0.1.0"
description = "Modulus robotarm control"
readme = "README.md"
requires-python = ">=3.8.10"
dependencies = [
    "deepmerge>=2.0",
    "imagezmq>=1.2.0",
    "opencv-python>=4.11.0.86",
    "pymycobot>=3.9.7",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.12.3",
    "pre-commit>=3.5.0",
    "ruff>=0.11.6",
]

[tool.ruff]
lint.select = ["E", "F", "I", "RUF"]
line-length = 120
target-version = "py38"
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
