[project]
name = "Modu-RobotArm-Control"
version = "0.1.0"
description = "Modulus robotarm control"
readme = "README.md"
requires-python = ">=3.8.10"
dependencies = [
    "aioredis>=2.0.1",
    "deepmerge>=2.0",
    "dotenv>=0.9.9",
    "fastapi",
    "opencv-python>=4.11.0.86",
    "pymycobot>=3.9.7",
    "redis[hiredis]>=5.2.1",
    "uvicorn>=0.33.0",
    "websockets>=13.1",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.12.3",
    "mypy>=1.14.1",
    "pre-commit>=3.5.0",
    "ruff>=0.11.6",
    "types-pyyaml>=6.0.12.20241230",
    "types-requests>=2.32.0.20241016",
]

[tool.ruff]
lint.select = ["E", "F", "I", "RUF"]
line-length = 120
target-version = "py38"
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[[tool.mypy.overrides]]
module = [
    "pymycobot.*",
    "youtube_dl.*",
    "imagezmq.*"
]
ignore_missing_imports = true
